--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,10 +1,19 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "0.1.0",    
-    "command": "tsc",
-    "isShellCommand": true,    
-    "args": ["-p", "./src/"],
-    "showOutput": "silent",
-    "problemMatcher": "$tsc"    
+	// See https://go.microsoft.com/fwlink/?LinkId=733558
+	// for the documentation about the tasks.json format
+	"version": "0.1.0",
+	"command": "npm",
+	"isShellCommand": true,
+	"showOutput": "silent",
+	"suppressTaskName": true,
+	"tasks": [{
+		"taskName": "build",
+		"args": ["run", "build"]
+	}, {
+		"taskName": "build:watch",
+		"args": [
+			"run", "build:watch"
+		],
+		"isBackground": true
+	}]
 }
