--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "node-typescript-express-g",
-  "version": "0.0.1",
-  "description": "this is a small generator of node express typescript",
-  "main": "index.js",
-  "scripts": {
-    "start": "node out/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "jose vargas",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1",
-    "typescript": "^2.6.2"
-  }
+	"name": "node-typescript-express-g",
+	"version": "0.0.1",
+	"description": "this is a small generator of node express typescript",
+	"main": "index.js",
+	"scripts": {
+		"start": "node out/index.js",
+		"build": "tsc",
+		"build:watch": "tsc -w",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "jose vargas",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"express": "^4.16.2",
+		"source-map-support": "^0.5.6",
+		"swagger-express-middleware": "^1.0.0-alpha.12"
+	},
+	"devDependencies": {
+		"@types/express": "^4.16.0",
+		"nodemon": "^1.17.5",
+		"shelljs": "^0.8.2",
+		"supertest": "^3.1.0",
+		"ts-node": "^6.1.1",
+		"tslint": "^5.10.0",
+		"typescript": "^2.9.1"
+	}
 }
